--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "nodemon": "^3.1.10",
-    "pug": "^3.0.3"
-  },
-  "devDependencies": {}
+    "pug": "^3.0.3",
+    "socket.io": "^4.8.1"
+  }
 }
